--- a/index.html
+++ b/index.html
@@ -84294,102 +84294,347 @@
  },
  {
   "Sr.No.": 11853,
-  "Service Name": "Senior Citizen Certificate",
+  "Service Name": "Migrant Caste Certificate",
   "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771255600130410",
-  "Application Name": "Dipak Narayan Shinde"
+  "Application Id": "'2552942771284600130429",
+  "Application Name": "Shankar Kishor Kesarkar"
  },
  {
   "Sr.No.": 11854,
-  "Service Name": "Non-Creamy Layer Certificate",
+  "Service Name": "Migrant Caste Certificate",
   "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771286600130411",
-  "Application Name": "Vinod Digambar Mestri"
+  "Application Id": "'2552942771284600130430",
+  "Application Name": "Shankar Kishor Kesarkar"
  },
  {
   "Sr.No.": 11855,
   "Service Name": "Migrant Caste Certificate",
   "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130429",
+  "Application Id": "'2552942771284600130432",
   "Application Name": "Shankar Kishor Kesarkar"
  },
  {
   "Sr.No.": 11856,
   "Service Name": "Migrant Caste Certificate",
   "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130430",
+  "Application Id": "'2552942771284600130431",
   "Application Name": "Shankar Kishor Kesarkar"
  },
  {
   "Sr.No.": 11857,
   "Service Name": "Migrant Caste Certificate",
   "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130432",
+  "Application Id": "'2552942771284600130445",
   "Application Name": "Shankar Kishor Kesarkar"
  },
  {
   "Sr.No.": 11858,
-  "Service Name": "Migrant Caste Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130431",
-  "Application Name": "Shankar Kishor Kesarkar"
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130449",
+  "Application Name": "Ankush Kashiram Nimankar"
  },
  {
   "Sr.No.": 11859,
-  "Service Name": "Migrant Caste Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130445",
-  "Application Name": "Shankar Kishor Kesarkar"
+  "Service Name": "EWS 10% Self-Declaration",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942775847600130466",
+  "Application Name": "Amjad Ismail Shaikh"
  },
  {
   "Sr.No.": 11860,
-  "Service Name": "Senior Citizen Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771255600130410",
-  "Application Name": "Dipak Narayan Shinde"
+  "Service Name": "General Affidavit",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771268600130468",
+  "Application Name": "Mahammadhusain Ismail Choche"
  },
  {
   "Sr.No.": 11861,
   "Service Name": "Non-Creamy Layer Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771286600130411",
-  "Application Name": "Vinod Digambar Mestri"
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771286600130463",
+  "Application Name": "Pravin Nilkanth Joil"
  },
  {
   "Sr.No.": 11862,
-  "Service Name": "Migrant Caste Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130429",
-  "Application Name": "Shankar Kishor Kesarkar"
+  "Service Name": "EWS 10% Self-Declaration",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942775847600130472",
+  "Application Name": "Amjad Ismail Shaikh"
  },
  {
   "Sr.No.": 11863,
-  "Service Name": "Migrant Caste Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130430",
-  "Application Name": "Shankar Kishor Kesarkar"
+  "Service Name": "Special Assistance Scheme",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942772236600130479",
+  "Application Name": "Vandana Madhukar Shiravdekar"
  },
  {
   "Sr.No.": 11864,
-  "Service Name": "Migrant Caste Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130432",
-  "Application Name": "Shankar Kishor Kesarkar"
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130358",
+  "Application Name": "Mushtufa Shafi Bagvan"
  },
  {
   "Sr.No.": 11865,
-  "Service Name": "Migrant Caste Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130431",
-  "Application Name": "Shankar Kishor Kesarkar"
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130344",
+  "Application Name": "Dashrath shamsundar Morye"
  },
  {
   "Sr.No.": 11866,
-  "Service Name": "Migrant Caste Certificate",
-  "Transaction Date": "04\/02\/2026",
-  "Application Id": "'2552942771284600130445",
-  "Application Name": "Shankar Kishor Kesarkar"
+  "Service Name": "Special Assistance Scheme",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942772236600130484",
+  "Application Name": "Vandana Madhukar Shirvdekar"
  },
+ {
+  "Sr.No.": 11867,
+  "Service Name": "Special Assistance Scheme",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942772236600130490",
+  "Application Name": "Darshan Dipak Kambali"
+ },
+ {
+  "Sr.No.": 11868,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130342",
+  "Application Name": "Suresh Krishna Tambe"
+ },
+ {
+  "Sr.No.": 11869,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130350",
+  "Application Name": "Sanjay Vasudev Amdoskar"
+ },
+ {
+  "Sr.No.": 11870,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130352",
+  "Application Name": "Sinddhu Gurushant Shilwant"
+ },
+ {
+  "Sr.No.": 11871,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130353",
+  "Application Name": "Pravin Ramchandra Kadam"
+ },
+ {
+  "Sr.No.": 11872,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130356",
+  "Application Name": "Disha Subhash Parab"
+ },
+ {
+  "Sr.No.": 11873,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130501",
+  "Application Name": "Rajendra Gangaram Chavhan"
+ },
+ {
+  "Sr.No.": 11874,
+  "Service Name": "Senior Citizen Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771255600130502",
+  "Application Name": "Santosh Gangaram Alav"
+ },
+ {
+  "Sr.No.": 11875,
+  "Service Name": "General Affidavit",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771268600130505",
+  "Application Name": "Pandhari Anant Rasam"
+ },
+ {
+  "Sr.No.": 11876,
+  "Service Name": "Senior Citizen Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771255600130506",
+  "Application Name": "Prakash Narayan Khadape"
+ },
+ {
+  "Sr.No.": 11877,
+  "Service Name": "Senior Citizen Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771255600130508",
+  "Application Name": "Namdev Aatmaram Sawant"
+ },
+ {
+  "Sr.No.": 11878,
+  "Service Name": "Senior Citizen Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771255600130512",
+  "Application Name": "Sanjay Krishna Kadam"
+ },
+ {
+  "Sr.No.": 11879,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130510",
+  "Application Name": "Anant Gurunath Parkar"
+ },
+ {
+  "Sr.No.": 11880,
+  "Service Name": "Migrant Caste Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771284600130516",
+  "Application Name": "Rupesh Manohar Jadhav"
+ },
+ {
+  "Sr.No.": 11881,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130317",
+  "Application Name": "Prakash Rajaram Wayagankar"
+ },
+ {
+  "Sr.No.": 11882,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130314",
+  "Application Name": "Devu Ambaji Gurav"
+ },
+ {
+  "Sr.No.": 11883,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130278",
+  "Application Name": "Anamika Ajit Kamble"
+ },
+ {
+  "Sr.No.": 11884,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130268",
+  "Application Name": "Chetankumar Dipak Jadhav"
+ },
+ {
+  "Sr.No.": 11885,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130266",
+  "Application Name": "Vishwanath Janardan Rane"
+ },
+ {
+  "Sr.No.": 11886,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130265",
+  "Application Name": "Shantaram Prabhkar Valave"
+ },
+ {
+  "Sr.No.": 11887,
+  "Service Name": "Age Nationality and Domicile",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771253600130519",
+  "Application Name": "Savita Umesh Waghmare"
+ },
+ {
+  "Sr.No.": 11888,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130452",
+  "Application Name": "Suhasini Ramchandra Narighekar"
+ },
+ {
+  "Sr.No.": 11889,
+  "Service Name": "Age Nationality and Domicile",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771253600130527",
+  "Application Name": "Sanjay Laxman Haryan"
+ },
+ {
+  "Sr.No.": 11890,
+  "Service Name": "Migrant Caste Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771284600130525",
+  "Application Name": "Dinesh Vasant Chavan"
+ },
+ {
+  "Sr.No.": 11891,
+  "Service Name": "Age Nationality and Domicile",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771253600130533",
+  "Application Name": "Komal Shamsundar Ghadi"
+ },
+ {
+  "Sr.No.": 11892,
+  "Service Name": "Migrant Caste Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771284600130534",
+  "Application Name": "Sagar Ramesh Shirsat"
+ },
+ {
+  "Sr.No.": 11893,
+  "Service Name": "Age Nationality and Domicile",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771253600130538",
+  "Application Name": "Komal Shamsundar Ghadi"
+ },
+ {
+  "Sr.No.": 11894,
+  "Service Name": "Migrant Caste Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771284600130539",
+  "Application Name": "Dinesh Gopal Kadam"
+ },
+ {
+  "Sr.No.": 11895,
+  "Service Name": "EWS 10% Self-Declaration",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942775847600130544",
+  "Application Name": "Sandip Sitaram Rane"
+ },
+ {
+  "Sr.No.": 11896,
+  "Service Name": "Migrant Caste Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771284600130548",
+  "Application Name": "Harshada Madhusudan Sawant"
+ },
+ {
+  "Sr.No.": 11897,
+  "Service Name": "Age Nationality and Domicile",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771253600130549",
+  "Application Name": "Paresh Viresh Patkar"
+ },
+ {
+  "Sr.No.": 11898,
+  "Service Name": "Age Nationality and Domicile",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771253600130552",
+  "Application Name": "Sanvi Sushant Raorane"
+ },
+ {
+  "Sr.No.": 11899,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130546",
+  "Application Name": "Madhusudan Shantaram Sawant"
+ },
+ {
+  "Sr.No.": 11900,
+  "Service Name": "Income Certificate",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771251600130530",
+  "Application Name": "Rajjak Ahamdalli Nawalekar"
+ },
+ {
+  "Sr.No.": 11901,
+  "Service Name": "Age Nationality and Domicile",
+  "Transaction Date": "05\/02\/2026",
+  "Application Id": "'2552942771253600130557",
+  "Application Name": "Swapnil Tukaram Raorane"
+ }
  ];
     
     // DOM elements
